style/styles.css
/* ... */
@media (min-width: 320px) and (max-width:767px){

    * {
        padding: 0;
        margin: 0;
    }

    body {
        margin: 25px;
    }

    .mobile-center {
        display: flex; 
        justify-content: center;
    }

    .grid-display {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: repeat(7, auto);
        gap: 1.5rem;
        margin: 0;
        justify-content: center;
    }

    .div-item:nth-child(1) {
        grid-row: 1;
        grid-column: 1;
    }
    
    .div-item:nth-child(2) {
        grid-row: 2;
        grid-column: 1;
    }
    
    .div-item:nth-child(3) {
        grid-row: 5;
        grid-column: 1;
    }

    .div-item:nth-child(4) {
        grid-row: 3;
        grid-column: 1;
    }

    .div-item:nth-child(5) {
        grid-row: 6;
        grid-column: 1;
    }

    .div-item:nth-child(6) {
        grid-row: 4;
        grid-column: 1;
    }

    .div-item:nth-child(7) {
        grid-row: 7;
        grid-column: 1;
    }

    .work svg {
        padding-right: 1rem;
    }
    
    .play svg {
        padding-right: 1rem;
    }
    
    .study svg {
        padding-right: 1rem;
    }
    
    .exercise svg {
        padding-right: 1rem;
    }
    
    .social svg {
        padding-right: 1rem;
    }
    
    .self-care svg {
        padding-right: 1rem;
    }

    .content {
        padding: 1.5rem 0 10px 1.5rem;
    }

    .changing-content {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        padding-left: 1.5rem;
        padding-bottom: 1rem;
    }

    .changing-content h1 {
        font-size: 32px;
        font-weight: lighter;
        color: white;
    }
    
    .changing-content p {
        font-size: 15px;
        color: #BBC0FF;
        margin: 1rem 1rem 0 1rem;
    }

    .personal {
        height: 203px;
        width: 327px;
        border-radius: 5%;
        margin-top: 2rem;
    }

    .personal-hero {
        height: 133px;
        width: 327px;
        border-radius: 5%;
        display: flex;
        flex-direction: row;
    }

    .mobile-flex {
        display: flex;
        flex-direction: column;
        padding: 3rem 0 0 0;
    }

    .personal-hero p {
        font-weight: normal;
        font-size: 15px;
        color: #BBC0FF;
        padding: 0;
    }
    
    .personal-hero h2 {
        font-size: 24px;
        font-weight: lighter;
        color: white;
        padding: 5px 0 0 0;
    }
    
    .jeremy {
        width: 64px;
        height: 64px;
        border: 4px solid white;
        border-radius: 50%;
        margin: 2rem 1rem 2rem 2rem;
    }

    .mobile-bottom-flex {
        display: flex;
        justify-content: space-around;
        padding-top: 25px;
    }

    .mobile-bottom-flex p {
        padding: 0;
    }

    .work {
        width: 327px;
        height: 160px;
    }

    .work-hero {
        width: 327px;
        height: 122px;
    }

    .exercise {
        width: 327px;
        height: 160px;
    }

    .exercise-hero {
        width: 327px;
        height: 112px;
    }

    .play {
        width: 327px;
        height: 160px;
    }

    .play-hero {
        width: 327px;
        height: 122px;
    }

    .social {
        width: 327px;
        height: 160px;
    }

    .social-hero {
        width: 327px;
        height: 122px;
    }

    .study {
        width: 327px;
        height: 160px;
    }

    .study-hero {
        width: 327px;
        height: 122px;
    }

    .self-care {
        width: 327px;
        height: 160px;
        margin-bottom: 2rem;
    }

    .self-care-hero {
        width: 327px;
        height: 122px;
    }

    .worksvg {
        position: absolute;
        top: -4%;
        right: 1%;
    }
    
    .playsvg {
        position: absolute;
        top: -4%;
        right: 1%;
    }
    
    .studysvg {
        position: absolute;
        top: -4%;
        right: 1%;
    }
    
    .socialsvg {
        position: absolute;
        top: -4%;
        right: 1%;
    }
    
    .selfcaresvg {
        position: absolute;
        top: -4%;
        right: 1%;
    }
    
    .exercisesvg {
        padding-right: 1rem;
    }

}

